[tool.poetry]
name = "dbworkload"
version = "0.6.0"
description = "Workload framework"
authors = ["Fabio Ghirardello"]
license = "GPLv3+"
readme = "README.md"
homepage = "https://dbworkload.github.io/dbworkload/"
repository = "https://github.com/dbworkload/dbworkload"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]

[tool.poetry.scripts]
dbworkload = 'dbworkload.cli.main:app'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
tabulate = "^0.9.0"
numpy = "^1.23.5"
prometheus-client = "^0.15.0"
pyyaml = "^6.0"
typer = {extras = ["all"], version = "^0.7.0"}
cassandra-driver = {version = "^3.29.1", optional = true}
mysql-connector-python = {version = "^8.4.0", optional = true}
oracledb = {version = "^2.2.0", optional = true}
psycopg = {version = "^3.1.19", optional = true}
psycopg-binary = {version = "^3.1.19", optional = true}
pymongo = {version = "^4.7.2", optional = true}
pyodbc = {version = "^5.1.0", optional = true}
mariadb = {version = "^1.1.10", optional = true}
google-cloud-spanner = {version = "^3.49.1", optional = true}
pytdigest = "^0.1.4"
plotext = "^5.2.8"
plotly = "^5.24.0"
jinja2 = "^3.1.4"
sqlparse = "^0.5.1"

[tool.poetry.extras]
all =  ["psycopg", "psycopg-binary", "mysql-connector-python", "mariadb", "oracledb", "pyodbc", "pymongo", "cassandra-driver", "google-cloud-spanner"]
postgres = ["psycopg", "psycopg-binary"]
mysql = ["mysql-connector-python"]
mariadb = ["mariadb"]
oracle = ["oracledb"]
odbc = ["pyodbc"]
mongo = ["pymongo"]
cassandra = ["cassandra-driver"]
spanner = ["google-cloud-spanner"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
